ghc-4335c07/testsuite/tests/roles/should_compile/T10263.hs
{-# LANGUAGE RoleAnnotations #-}
module T10263 where

data Maybe a = AF
type role Maybe representational
