ghc-4335c07/testsuite/tests/roles/should_fail/Roles6.hs
{-# LANGUAGE RoleAnnotations #-}

module Roles6 where

data Foo a b = MkFoo (a b)

type role Foo nominal representational phantom

